tests/baselines/reference/staticClassInitializerUseNamespacePropertyBeforeDeclaration.errors.txt
tests/cases/compiler/staticClassInitializerUseNamespacePropertyBeforeDeclaration.ts(2,29): error TS2448: Block-scoped variable 'A' used before its declaration.


==== tests/cases/compiler/staticClassInitializerUseNamespacePropertyBeforeDeclaration.ts (1 errors) ====
    class Foo {
        public static bar = Bar.A;
                                ~
!!! error TS2448: Block-scoped variable 'A' used before its declaration.
    }
    
    namespace Bar {
        export let A = 0
    }
    